--- a/1-Schemas/A-entity_record_schema/00_common_definitions.yml
+++ b/1-Schemas/A-entity_record_schema/00_common_definitions.yml
@@ -238,5 +238,5 @@ definitions:
   compliance_class:
     type: string
     enum:
-      - legislative
+      - regulatory
       - corporate policy
