--- a/1-Schemas/A-entity_record_schema/02_functional-location.yml
+++ b/1-Schemas/A-entity_record_schema/02_functional-location.yml
@@ -198,7 +198,7 @@ definitions:
 # RULES
 #############################################################
 
-rule_spec:
+RULE_SPEC:
 
   - name: ID of Linear Assets Represented as functional-location in Maximo
     spec_ID: Vku-67dDxx
