--- a/1-Schemas/A-entity_record_schema/06_tool_master.yml
+++ b/1-Schemas/A-entity_record_schema/06_tool_master.yml
@@ -15,7 +15,7 @@ properties:
   name:
     type: string 
     description: The human readable short description of the tool.
-    rule_spec:
+    RULE_SPEC:
       - name: tool master name
         spec_ID: VJpSzGxdxg
         type: implication
@@ -38,7 +38,7 @@ properties:
   class:
     $ref: "../B-entity_class_object_schema/01_asset_item_tool_class.yml"
     description: This is a value from the classification, which is a superset of the asset class.
-    rule_spec:
+    RULE_SPEC:
       - name: Tool classification list does not include parts non tools
         spec_ID: V1ulHHWOgx
         specification: |
