--- a/1-Schemas/A-entity_record_schema/00_common_object_definition_components.yml
+++ b/1-Schemas/A-entity_record_schema/00_common_object_definition_components.yml
@@ -1,12 +1,60 @@
 ---
 $schema: "http://json-schema.org/draft-07/schema#"
-title: common properties of all entities
-$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/A-entity_record_schema/00_common_definitions.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/A-entity_record_schema/00_common_object_definition_components.yml
   
 # NOTE:
   # _: This file contains data definitions that are used multiple time, across different data objects. 
 
 definitions:
+
+# DEFINED CLASS OR CATEGORY
+
+  defined_class_or_category_def:
+    description: Indicates the more specific logically defined classes or more general category to which this asset is an instance. 
+    oneOf: 
+      - type: null
+      - type: array
+        items:
+          type: object
+          properties:
+            class_or_category:
+              description: Indicates the defined class or category
+              $ref: "../B-entity_class_object_schema/01_physical_entity_and_functional_location_class.yml"
+              RULE_SPEC:
+                - name: Valid class values for defined_class_or_category
+                  spec_ID: VJke7GMPfl
+                  type: [validation, UI]
+                  specification:
+                    if obj_x.defined_class_or_category = class_x
+                      then obj_x.properties.is_a_defined_class_or_category = TRUE
+            system_inferred:
+              description: Indicates whether the present value of defined class or category is inferred automatically by a rule.
+              type: boolean
+    mapping_note:
+      remark: the current Avantis categories, with exception of the one called  component/cat., will be mapped to this field.
+
+# MAKE AND MODEL
+
+  make_and_model_def:
+    properties:
+      
+      product_make:
+        oneOf:
+        - type: null
+        - type: string
+        description: The company that brands the product. If a company brands the product and another manufactures the the project, then enter the name of the former. 
+
+      product_model:
+        oneOf:
+        - type: null
+        - type: string
+        description: The complete model and sub-model description. For example, "Multilin 869"
+
+      product_version_or_model_year:
+        oneOf:
+        - type: null
+        - type: string
+        description: Identifies the specific version of the product model. For example "v2" or "2023".
 
 # ATTACHMENTS
 
@@ -102,7 +150,7 @@ definitions:
         - type: null
         - type: array
           items:
-            $ref: "../B-entity_class_object_schema/09_qualification.yml"
+            $ref: "./09_qualification.yml"
 
 # UNIT OF MEASURE
 
