--- a/1-Schemas/A-entity_record_schema/08_person.yml
+++ b/1-Schemas/A-entity_record_schema/08_person.yml
@@ -1,30 +1,25 @@
 $schema: http://json-schema.org/draft-07/schema#
-title: Person
 $id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/1-Schemas/A-entity_record_schema/08_person.yml
 type: object
 
 properties:
 
   employee_number:
-    P3_MVP: true
     type: string
 
   first_name:
-    P3_MVP: true
     type: string
   
   last_name:
     type: string
   
   display_name:
-    P3_MVP: true
     description: Full name displayed (usually a combination of first and last names)
     oneOf:
       - type: null
       - type: string
-
+  
   section:
-    P3_MVP: true
     description: Indicates which section within a division that the person works for
     type: string
     oneOf:
@@ -32,14 +27,12 @@ properties:
       - type: string
 
   unit:
-    P3_MVP: true
     description: Indicates which business-unit within a section that the person works for
     oneOf:
       - type: null
       - type: string
   
   status:
-    P3_MVP: true
     type: string
     enum:
       - active
@@ -47,7 +40,6 @@ properties:
       - departed 
   
   person_roles:
-    P3_MVP: true
     description: The role, associated with a certain type of system access, that the person plays in the system. 
     oneOf:
       - type: null
@@ -58,7 +50,6 @@ properties:
   # NOTE: persons' association to trade in documented in the trade object    
 
   qualifications:
-    P3_MVP: true
     description: The qualifications that the person gained through training or certification. 
     oneOf:
       - type: null
@@ -95,10 +86,9 @@ properties:
     oneOf:
       - type: null
       - type: object
-        $ref: "./13_service_contract.yml"
+        $ref: "./11_warranty_service_contract.yml"
   
   contact:
-    P3_MVP: true
     properties:
       email_address:
         description: Email address of the person
@@ -112,9 +102,7 @@ properties:
   # COMMON RECORD PROPERTIES
 
   duplicate_record_of:
-    P3_MVP: true
-    $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
+    $ref: "./00_common_object_definition_components.yml#/definitions/duplicate_record_def"
   
   record_retirement_information:
-    P3_MVP: true
-    $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
+    $ref: "./00_common_object_definition_components.yml#/definitions/record_retirement_def"
