--- a/1-Schemas/A-entity_record_schema/33_PM.yml
+++ b/1-Schemas/A-entity_record_schema/33_PM.yml
@@ -1,6 +1,5 @@
 ---
 $schema: http://json-schema.org/draft-07/schema#
-title: PM
 $id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/1-Schemas/A-entity_record_schema/33_PM.yml
 type: object
 
@@ -116,7 +115,7 @@ properties:
 
   estimated_duration:
     description: is the estimated time to complete the activity in the job plan
-    $ref: "./00_common_definitions.yml#/definitions/frequency_interval_definition"
+    $ref: "./00_common_object_definition_components.yml#/definitions/frequency_interval_definition"
   
   parts_or_material_requirements:
     description: identifies the parts or material required to complete a work order generated from the PM.
@@ -124,7 +123,7 @@ properties:
       - type: null
       - type: array
         items:
-          $ref: "./00_common_definitions.yml#/definitions/item_requirement_definition"
+          $ref: "./00_common_object_definition_components.yml#/definitions/item_requirement_definition"
 
   tool_requirements:
     description: identifies the tools required to complete a work order generated from the PM.
@@ -132,7 +131,7 @@ properties:
       - type: null
       - type: array
         items:
-          $ref: "./00_common_definitions.yml#/definitions/tool_requirements_definition"
+          $ref: "./00_common_object_definition_components.yml#/definitions/tool_requirements_definition"
 
   skill_and_trade_requirements:
     description: identifies the trades and qualifications of each trade needed to complete the work.
@@ -140,7 +139,7 @@ properties:
     - type: null
     - type: array
       items:
-        $ref: "./00_common_definitions.yml#/definitions trade_requirement_definition"
+        $ref: "./00_common_object_definition_components.yml#/definitions trade_requirement_definition"
 
   service_requirements:
     description: identifies (contracted) service needed to complete to complete a work order generated from the PM.
@@ -148,7 +147,7 @@ properties:
       - type: null
       - type: array
         items:
-          $ref: "./00_common_definitions.yml#/definitions/service_requirement_definition"
+          $ref: "./00_common_object_definition_components.yml#/definitions/service_requirement_definition"
 
   # Work Triggering Specification
 
@@ -172,18 +171,16 @@ properties:
   regulated:
     
   compliance_level:
-    $ref: "./00_common_definitions.yml#/definitions/compliance_class"
+    $ref: "./00_common_object_definition_components.yml#/definitions/compliance_class"
     work_entity_harmonization: WR(x), WO(_), JP(_)
   
   # COMMON RECORD PROPERTIES
 
   duplicate_record_of:
-    P3_MVP: true
-    $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
+    $ref: "./00_common_object_definition_components.yml#/definitions/duplicate_record_def"
 
   record_retirement_information:
-    P3_MVP: true
-    $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
+    $ref: "./00_common_object_definition_components.yml#/definitions/record_retirement_def"
 
 ##########################################################
 # LOCAL OBJECT DEFINITIONS
@@ -196,7 +193,7 @@ definitions:
       type: string
       format: date
     frequency_interval:
-      $ref: "./00_common_definitions.yml#/definitions/frequency_interval_definition"
+      $ref: "./00_common_object_definition_components.yml#/definitions/frequency_interval_definition"
 
   meter-based_trigger_specification:
     reading_at_last_service_completion:
@@ -208,4 +205,4 @@ definitions:
     meter_condition:
       oneOf:
         - type: null
-        - $ref: "./00_common_definitions.yml#/definitions/meter_condition_definition"
+        - $ref: "./00_common_object_definition_components.yml#/definitions/meter_condition_definition"
