--- a/1-Schemas/A-entity_record_schema/41_meter.yml
+++ b/1-Schemas/A-entity_record_schema/41_meter.yml
@@ -1,5 +1,4 @@
 $schema: "http://json-schema.org/draft-07/schema#"
-title: Maximo Meter
 description: A JSON Schema representing a Meter object in IBM Maximo.
 $id: https://raw.githubusercontent.com/TW-ASMP/TWDM/1-Schemas/A-entity_record_schema/41_meter.yml
 type: object
@@ -69,9 +68,7 @@ properties:
 # COMMON RECORD PROPERTIES
 
   duplicate_record_of:
-    P3_MVP: true
-    $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def" 
+    $ref: "./00_common_object_definition_components.yml#/definitions/duplicate_record_def" 
 
   record_retirement_information:
-    P3_MVP: true
-    $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
+    $ref: "./00_common_object_definition_components.yml#/definitions/record_retirement_def"
